feat: parsing dates and reminders

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,11 @@
-  # Twitter Credentials
-  CONSUMER_KEY=
-  CONSUMER_SECRET=
-  ACCESS_TOKEN_KEY=
-  ACCESS_TOKEN_SECRET=
+# Twitter Credentials
+CONSUMER_KEY=
+CONSUMER_SECRET=
+ACCESS_TOKEN_KEY=
+ACCESS_TOKEN_SECRET=
+
+# Database Credentials
+DB_HOST=LOCALHOST?
+DB_USER=ACCESS_USER
+DB_PASS=ACCESS_PASSWORD
+DB_NAME=NAME_OF_YOUR_DB
