--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "commitizen": "^4.0.3",
+    "date-fns": "^2.11.1",
     "dotenv": "^8.2.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
+    "pg": "^8.0.0",
     "prettier": "^2.0.2",
+    "sequelize": "^5.21.5",
     "sucrase": "^3.13.0",
     "twitter": "^1.7.1"
   },
