--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bee-queue": "^1.2.3",
     "commitizen": "^4.0.3",
     "date-fns": "^2.11.1",
     "dotenv": "^8.2.0",
