refactor: redis env variable

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ DB_HOST=LOCALHOST?
 DB_USER=ACCESS_USER
 DB_PASS=ACCESS_PASSWORD
 DB_NAME=NAME_OF_YOUR_DB
+
+# Redis Connection
+REDIS_HOST=
+REDIS_PORT=
