--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "express": "^4.17.1",
+    "node-cron": "^2.0.3",
     "pg": "^8.0.0",
     "prettier": "^2.0.2",
     "sequelize": "^5.21.5",
